--- a/app/src/main/res/layout/fragment_charts.xml
+++ b/app/src/main/res/layout/fragment_charts.xml
@@ -4,26 +4,36 @@
     android:layout_height="match_parent"
     android:background="@android:color/white">
 
-    <TextView
-        android:id="@+id/charts_textView"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChartWeight"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
-        android:text="Charts Fragment"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/charts_textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="178dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
-        android:text="Charts Fragment"
-        android:textSize="18sp" />
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="49dp" />
 
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChartEmissions"
+        android:layout_width="wrap_content"
+        android:layout_height="172dp"
+        android:layout_below="@+id/lineChartWeight"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="49dp" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/lineChartMeatEmissions"
+        android:layout_width="wrap_content"
+        android:layout_height="171dp"
+        android:layout_below="@+id/lineChartEmissions"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="49dp" />
 </RelativeLayout>
